[package]
name = "dede"
version = "0.1.1"
authors = ["sodo <djdisodo@gmail.com>"]
edition = "2018"
description = "macro: derive Deref and DerefMut"
license-file = "./LICENSE"
documentation = "https://docs.rs/dede"
repository = "https://github.com/djdisdo/dede-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"

[lib]
proc-macro = true
